"ChangeLog"

2007-06-08	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-28:
	  Added lib/mk/Makefile.am, installed makefile templates, 
		now generated to reduce maintainence replication.


2007-06-04	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-25:
	  configure.ac: date bump, added summary at end
	  pkg/*.info: updates of fink packages


2007-05-03	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-22-merged-chpsim-04-34:
	  chpsim-04 branch merge.


2007-05-03	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-21:
	  config/guile.m4: eval and AC_SUBST(GUILE_CONFIG_VERSION)
		now report this in build reports.  
	  configure.ac: date bump


2007-04-20	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-15-scm-01-19-merged-scm-01-37:
	  scm-01 branch merge.


2007-03-26	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-15-scm-01-14:
	  Now install bin/init_hackt.[c]sh scripts, subst'd by configure.
		Setup scripts establish some environment variables for user.
	  config/guile.m4: override-able --with-guile-snarf AR_ARG_WITH
		for systems that install guile under some name-transformation.
		Same with --with-guile-tools.


2007-03-25	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-15-scm-01-13:
	  Added hackt-config.in as an installed configure flag script.


2007-03-18	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-14:
	  config/guile.m4: fixed conditional AM_CONDITIONAL to unconditional.
	  README, README.CVS: additional instructions.
	  Added pkg/README, pkg/hackt-{cvs,dist}-deps.info fink packages.
		Listed them in EXTRA_DIST of Makefile.am.


2007-03-16	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-11:
	  AC_CHECK_FUNC(atexit), because we need it for guile-ism.
	  config/guile.m4: also check for scm_init_guile()

